# Labs2

./: Example_schema.jspn  codebase_summary_schema.markdown  schema.json
code_analyzer/src/: analyzer.py  config.py  llm_utils.py  processor.py  report_generator.py  static_analyzer.py  utils.py
code_analyzer_app/: .analysis_cache.json  .gitignore  BRD.md  MCPIndexAgent_Technical_Spec.markdown  MetadataExtractorAgent_Technical_Spec.markdown  MetadataExtractorAgent_v2_Technical_Spec_Revised.markdown  ParserAgent_Technical_Spec.markdown  README.md  README_old.md  cache.json  main.py  requirements.txt
code_analyzer_app/config/: __init__.py  settings.json  settings.py
code_analyzer_app/config/artifacts/: application_portfolio.jinja2  architecture_diagram.jinja2  business_logic_doc.jinja2  code_metrics_quality.jinja2  data_model_diagram.jinja2  dependency_map.jinja2  functional_requirements.jinja2  report_security.jinja2  (+1 more)
code_analyzer_app/core/: __init__.py  config_loader.py  llm_client.py  llm_manager.py  processor.py  report_generator.py  static_analyzer.py  template_renderer.py  utils.py
code_analyzer_app/prompts/: analysis_prompt.txt  functional_requirements_prompt.txt  summary_prompt.txt
treesitter_code_analyzer/: README.md  main.py  pyproject.toml
treesitter_code_analyzer/config/: config.yml
treesitter_code_analyzer/src/code_analyzer/: parser.py  parser2.py
treesitter_code_analyzer/src/code_analyzer/queries/: javascript.yaml  python.yaml
treesitter_code_analyzer/src/treesitter_code_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+16 files in other folders)
